# pyhvdfa

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  agents.md  meson.build  pyproject.toml
.github/workflows/: build_wheels.yml  tests.yml
examples/: 01_quickstart.ipynb  02_model_comparison.ipynb  03_parameter_sensitivity.ipynb  04_batch_parallel.ipynb
fortran_src/: hv_wrapper.f90  modules_patched.f90
src/pyhvdfa/: __init__.py  _hv_core.pyi  _types.py  hv_core.pyf  meson.build
tests/: conftest.py  generate_reference.sh  test_compute_hv.py  test_module_exports.py  test_parallelism.py  test_reference.py  test_types.py
tests/reference_data/: hv_model_3layer.csv  hv_model_kirk.csv  hv_simple_2layer.csv  hv_soft_sediment.csv
tests/reference_data/models/: model_3layer.txt  model_kirk.txt  simple_2layer.txt  soft_sediment.txt
